binrw/tests/ui/enum_missing_magic_repr.stderr
error: BinRead on unit-like enums requires either `#[br(repr = ...)]` on the enum or `#[br(magic = ...)]` on at least one variant
 --> $DIR/enum_missing_magic_repr.rs:3:10
  |
3 | #[derive(BinRead)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `BinRead` (in Nightly builds, run with -Z macro-backtrace for more info)
